--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "sort-packages": true,
     "preferred-install": "dist"
   },
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "support": {
     "issues": "https://github.com/arraypress/wp-register-taxonomy-tabs/issues",
     "source": "https://github.com/arraypress/wp-register-taxonomy-tabs"
